An attempt to fix disorted submit button on mobile devices like iPhone - please review (#370)
* Update _forms.scss

* Update _forms.scss

* Update _forms.scss

--- a/static/css/_forms.scss
+++ b/static/css/_forms.scss
@@ -58,6 +58,7 @@ form.inline {
     cursor: pointer;
     font-size: 1em;
     width: auto;
+   -webkit-appearance: none;
 
     &:not(.button) {
       margin: 0;
@@ -72,6 +73,7 @@ form.inline {
 .button, input[type="submit"], button {
  	transition: all 0.1s ease-in;
  	display: inline-block;
+  -webkit-appearance: none;
 
  	border-radius: 0.5em;
  	margin: 0.5em auto;
@@ -123,9 +125,11 @@ form.new-post {
    	background: $lightgray;
    	color: $black;
    	border: none;
+    -webkit-appearance: none;
 
    	font-family: $playfair;
    	font-size: 1.5em;
   }
   input[type="submit"]:hover { background: $lightgray; }
+  -webkit-appearance: none;
 }
